Fixed link positioning on tablet viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,11 @@
     height: 100vh;
 }
 
-.list-unstyled,.row-first,.row-second,.row-third {
+.list-unstyled,.row-first,.row-second,.row-third,.contact-first,.contact-second {
     display: flex;
 }
 
-.list-unstyled {
+.list-unstyled,.contact-first,.contact-second {
     flex-direction: column;
 }
 
@@ -17,4 +17,19 @@
 
 .row-first,.row-second,.row-third {
     margin-top: 1em;
+}
+
+@media (min-width: 768px) {
+    .contact-first,.contact-second {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .contact-first,.contact-second {
+        margin-top: 1em;
+    }
+
+    .top-link {
+        margin-top: 13em;
+    }
 }
